# GlatteisGeoparser

./: .gitignore  PLANNING.md  README.md  demo_notebook.py  demo_testing_app.py  launch_tester.py  pyproject.toml
GlatteisTester/: README.md  install-prod-build.sh  package.json  svelte.config.js  vite.config.ts
GlatteisTester/src/lib/: api.ts  config.ts  interfaces.ts
GlatteisTester/src/lib/components/: choice-buttons.svelte  feature-choices.svelte  features-bar.svelte  location-map.svelte  menu-bar.svelte  select-words.svelte
GlatteisTester/src/lib/primitives/: button.svelte  scroll-container.svelte  skeleton.svelte
GlatteisTester/src/lib/scss/: global.scss  variables.scss
GlatteisTester/src/lib/stores/: geodata.svelte.ts  user.svelte.ts
GlatteisTester/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
glattlibs/: Cargo.toml  pyproject.toml
glattlibs/src/: lib.rs
src/glatteisgeoparser/: __init__.py  configs.py  geodata.py  geoparser.py  utilities.py
src/glatteisgeoparser/geotester/: __init__.py  testing_functions.py
src/glatteisgeoparser/recognizer/: __init__.py  ollama.py  spacy.py  stanza.py  text_search.py
src/glatteisgeoparser/resolver/: __init__.py  ollama.py  statistical.py
src/glatteisgeoparser/testing_framework/: __init__.py  cross_language_tester.py
src/instance/: db.sqlite
test_apis/: launch_geotester.py  launch_geotester_quick.py  launch_tester.py
test_apis/Glatteis_api_testing/: workspace.yml
test_langs/: de.py
tests/: test_geodata.py  test_main.py  test_tester.py  test_token_matching.py
(+320 files in other folders)
