[project]
name = "glatteisgeoparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Morley Weston", email = "118724731+morleyjamesweston@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "geopandas>=1.1.3",
    "glattlibs",
]

[project.scripts]
glatteisgeoparser = "glatteisgeoparser:main"

[dependency-groups]
dev = [
    "maturin>=1.13.3",
    "stanza>=1.12.1",
    "ollama>=0.6.2",
    "spacy>=3.8.14",
    "pytest-cov>=7.1.0",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
ollama = [
    "ollama>=0.6.2",
]
spacy = [
    "click>=8.4.1",
    "spacy>=3.8.14",
]
stanza = [
    "stanza>=1.12.1",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [".", "glattlibs"]

[tool.uv.sources]
glattlibs = { workspace = true }

[tool.ty.environment]
root = ["./src", "./glattlibs"]
sources = ["./src", "./glattlibs/src"]
